finished logic for M1, refactored review feedback